--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ img.logo{
      top: 0;
      width: 100%;
      height: 100%;
-     background: url("images/contactus.png") no-repeat center;
+     background: url("Images/contactus.png") no-repeat center;
      background-size: cover;
      z-index: -1;
      filter: blur(10px);
@@ -273,7 +273,7 @@ img.logo{
  }
  .left{
      height: 100%;
-     background: url("images/contactus.png") no-repeat center;
+     background: url("Images/contactus.png") no-repeat center;
  }
 
  .right{
